[package]
name = "marie-emulator"
version = "0.1.0"
authors = ["ogkloo <weathercontrol@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "marie"
path = "src/lib.rs"

[[bin]]
name = "driver"
path = "src/main.rs"

[dependencies]
